--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.3.1",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
