--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
-# MONGO_URL=mongodb://127.0.0.1:27017/forms
-MONGO_URL=mongodb+srv://Bran:RoKu1026@cluster0.u8pjxjs.mongodb.net/?retryWrites=true&w=majority&appName=AtlasApp
+MONGO_URL=mongodb://127.0.0.1:27017/forms 
+# MONGO_URL=mongodb+srv://Bran:RoKu1026@cluster0.u8pjxjs.mongodb.net/?retryWrites=true&w=majority&appName=AtlasApp
